@@ -683,7 +683,7 @@ init_types (ctf_dict_t *fp, ctf_header_t *cth)
 
   unsigned long pop[CTF_K_MAX + 1] = { 0 };
   const ctf_type_t *tp;
-  uint32_t id, dst;
+  uint32_t id;
   uint32_t *xp;
 
   /* We determine whether the dict is a child or a parent based on the value of
@@ -952,25 +952,6 @@ init_types (ctf_dict_t *fp, ctf_header_t *cth)
 	       ctf_hash_size (fp->ctf_unions.ctn_readonly), nlunions);
   ctf_dprintf ("%u base type names hashed\n",
 	       ctf_hash_size (fp->ctf_names.ctn_readonly));
-
-  /* Make an additional pass through the pointer table to find pointers that
-     point to anonymous typedef nodes.  If we find one, modify the pointer table
-     so that the pointer is also known to point to the node that is referenced
-     by the anonymous typedef node.  */
-
-  for (id = 1; id <= fp->ctf_typemax; id++)
-    {
-      if ((dst = fp->ctf_ptrtab[id]) != 0)
-	{
-	  tp = LCTF_INDEX_TO_TYPEPTR (fp, id);
-
-	  if (LCTF_INFO_KIND (fp, tp->ctt_info) == CTF_K_TYPEDEF
-	      && strcmp (ctf_strptr (fp, tp->ctt_name), "") == 0
-	      && LCTF_TYPE_ISCHILD (fp, tp->ctt_type) == child
-	      && LCTF_TYPE_TO_INDEX (fp, tp->ctt_type) <= fp->ctf_typemax)
-	      fp->ctf_ptrtab[LCTF_TYPE_TO_INDEX (fp, tp->ctt_type)] = dst;
-	}
-    }
 
   return 0;
 }
